--- a/BrewFile
+++ b/BrewFile
@@ -1,14 +1,31 @@
+tap "homebrew/bundle"
+tap "homebrew/services"
+tap "mongodb/brew"
 
-brew install mas 
-brew install nvm
-brew install git
-brew install openjdk@17
-brew install docker
-brew install graphviz
+brew "mas"
+brew "git"
+brew "curl"
+brew "nvm"
+brew "yarn"
+brew "tcping"
+brew "openjdk@17"
+brew "docker"
+brew "graphviz"
 
-brew install --cask iterm2
-brew install --cask docker
-brew install --cask jetbrains-toolbox
-brew install --cask brave-browser
+cask "iterm2"
+cask "maccy"
+cask "docker"
+cask "jetbrains-toolbox"
+cask "visual-studio-code"
+cask "cursor"
+cask "brave-browser"
+cask "figma"
+cask "notion"
+cask "google-chrome"
 
-mas install 869223134
+# mas "Xcode", id: 497799835
+mas "KakaoTalk", id: 869223134
+mas "Sequel Ace", id: 1518036000
+mas "Swit", id: 1464411410
+mas "ScreenBrush ", id: 1233965871
+
